Refactor BikeRental and VehicleParking updaters
* use common DataSource interface
* extract generic xml and json updaters